--- a/projects/projects.html
+++ b/projects/projects.html
@@ -13,6 +13,12 @@
 	<h1>Projects</h1>
 	</header>
 	<div class="container">
+		 <nav>
+        <ul>
+          <li><a href="B5_Infographic/index.html">B5-uppgift</a></li>
+         
+        </ul>
+      </nav>
 		<div class="img-circle">
 			
 		</div>
