--- a/projects/projects.html
+++ b/projects/projects.html
@@ -15,7 +15,7 @@
 	<div class="container">
 		 <nav>
         <ul>
-          <li><a href="B5_Infographic/index.html">B5-uppgift</a></li>
+          <li><a href=Infographic/index.html">Infographic</a></li>
          
         </ul>
       </nav>
