--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
 <!-- <script src="controllers/about.Ctrl.js"></script> -->
-
+<script>
+    if (window.location.host.indexOf('github.io') > -1 && window.location.protocol == "https:"){
+        window.location.protocol = "http";
+    }
+</script>
 <!-- <script src="scripts/controllers/aboutCtrl.js"></script> -->
 </body>
 </html>
