--- a/projects/projects.html
+++ b/projects/projects.html
@@ -16,7 +16,7 @@
 		 <nav>
         <ul>
           <li><a href="Infographic/index.html">Infographic</a></li>
-	  <li><a href="Spel/index.html>Spel</a></li>
+	  <li><a href="Spel/index.html">Spel</a></li>
         </ul>
       </nav>
 		<div class="img-circle">
