--- a/about/about.html
+++ b/about/about.html
@@ -16,7 +16,11 @@
 		<div class="img-circle">
 			
 		</div>
-
+         <p>     Jag heter Nicolae, bor i Södertälje och jag är 48 år. 
+		 Jag hade bästämd mig förut att jobba inom IT branschen men jag kunde inte göra detta på grund av olika anledningar.
+		 För sju år sedan jag har flyttat i Sverige och har börjat ett nytt liv. 
+		 Jag har slutat utbildningen som frontend utvecklare och nu tar jag den här steget i mitt liv med en stor provocation. 
+        </p>	 
 	</div>
 </body>
 </html>
