--- a/projects/projects.html
+++ b/projects/projects.html
@@ -15,7 +15,7 @@
 	<div class="container">
 		 <nav>
         <ul>
-          <li><a href="Infographic/index.html">Infographic</a></li>
+          <li><a href="Infographic/infographic.html">Infographic</a></li>
 	  <li><a href="Spel/index.html">Spel</a></li>
         </ul>
       </nav>
