--- a/index.html
+++ b/index.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Nicolae Rastau -Portofolio</title>
-    <meta name ="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/main.css">
-    
-  </head>
- <body  class="responsive-image">
+<html ng-app="animateApp">
+<head>
+	<title>Nicolae Rastau - Portfolio</title>
+	<meta name ="viewport" content="width=device-width, initial-scale=1.0",maximum-scale=1,user-scalable=no, charset="utf-8">
+	<!-- CSS -->
+	<!-- load bootstrap (bootswatch version) -->
+	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootswatch/3.1.1/readable/bootstrap.min.css">
+	<link rel="stylesheet" href="style.css">
 
- <header>
- <div class="container">
-       <div class="navigation-top" id="nav">
-	     <ul class="sidenav">
-	     	<li><a class="active" id="about" href="about/about.html">About</a></li>
-	     	<li><a class="active" id="contact" href="contact/contact.html">Contact</a></li>
-	     	<li><a class="active" id="projects" href="projects/projects.html">Projects</a></li>
-	     </ul>
-	   </div> 
- <div>
-  </header>
- 
-   <div id="name">Nicolae Rastau</div>>
-   <h2> Front-end Developer</h2>
-    <h2>Portfolio</h2>
-      <div id="progress">In progress</div>
- 
+	<!-- JS -->
+	<!-- load angular, ngRoute, ngAnimate -->
+	<script src="http://code.angularjs.org/1.2.13/angular.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.js"></script>
+	<script src="app.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
+</head>
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.18/angular-route.min.js"></script>
-<!-- <script src="controllers/about.Ctrl.js"></script> -->
+<!-- apply our angular app -->
+<body >
 
-<!-- <script src="scripts/controllers/aboutCtrl.js"></script> -->
+    <!-- inject our views using ng-view -->
+	<!-- each angular controller applies a different class here -->
+	<div class="page {{ pageClass }}" ng-view></div>
+
 </body>
 </html>
