--- a/page-about.html
+++ b/page-about.html
@@ -9,7 +9,12 @@
 <section id="description">
   <p class="blocktext">
 					My name is Nicolae, lives in Södertälje and I'm 48 years old. I had settled before to working in the IT industry but I could not do this because of various reasons.
-          Seven years ago I have moved in Sweden and have started a new life.
+          In 2010 I have moved in Sweden and have started a new life.
           Now I have finished education as a Javascript frontend-developer and now I take this step in my life with a major provocation.
   </p>
 </section>
+
+<div class="photo">
+  <img src="pictures/photo.jpg" alt="" />
+  
+</div>
