--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="animateApp">
+<html ng-app='animateApp'>
 <head>
 	<title>Nicolae Rastau - Portfolio</title>
 	<meta name ="viewport" content="width=device-width, initial-scale=1.0",maximum-scale=1,user-scalable=no, charset="utf-8">
