--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
 	<!-- JS -->
 	<!-- load angular, ngRoute, ngAnimate -->
-	<script src="http://code.angularjs.org/1.2.13/angular.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.js"></script>
+	<script src="https://code.angularjs.org/1.2.13/angular.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-route.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.13/angular-animate.js"></script>
 	<script src="app.js"></script>
 
 </head>
