--- a/page-home.html
+++ b/page-home.html
@@ -11,3 +11,14 @@
         <div id="portfolio">Portfolio</div>
        <div id="progress">In progress</div>
     </div>
+<div class="social">
+      <!-- Facebook -->
+      <a href="https://www.facebook.com/sharer/sharer.php?u="class="fa fa-facebook"></a>
+      <!-- <a href="https://www.facebook.com/sharer/sharer.php?u=">Share on Facebook</a> -->
+      <!-- Twitter -->
+      <a href="https://twitter.com/home?status="class="fa fa-twitter"></a>
+      <!-- Google-Plus -->
+      <a href="https://plus.google.com/share?url=" class="fa fa-google-plus"></a>
+      <!-- LinkedIn -->
+      <a href="https://www.linkedin.com/shareArticle?mini=true&url=&title=&summary=&source=" class="fa fa-linkedin"></a>
+ </div>
