--- a/page-about.html
+++ b/page-about.html
@@ -5,16 +5,25 @@
        <li><a class="active"  href="#projects">Projects</a></li>
       </ul>
 </div>
+<div class="social-about">
+
+  <!-- Facebook -->
+  <a href="https://www.facebook.com/sharer/sharer.php?u="class="fa fa-facebook"></a>
+  <!-- <a href="https://www.facebook.com/sharer/sharer.php?u=">Share on Facebook</a> -->
+  <!-- Twitter -->
+  <a href="https://twitter.com/home?status="class="fa fa-twitter"></a>
+  <!-- Google-Plus -->
+  <a href="https://plus.google.com/share?url=" class="fa fa-google-plus"></a>
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/shareArticle?mini=true&url=&title=&summary=&source=" class="fa fa-linkedin"></a>
+
+</div>
 <div id="title1">About</div>
+
 <section id="description">
   <p class="blocktext">
-					My name is Nicolae, lives in Södertälje and I'm 48 years old. I had settled before to working in the IT industry but I could not do this because of various reasons.
+	  My name is Nicolae, lives in Södertälje and I'm 48 years old. I had settled before to working in the IT industry but I could not do this because of various reasons.
           In 2010 I have moved in Sweden and have started a new life.
-          Now I have finished education as a Javascript frontend-developer and now I take this step in my life with a major provocation.
+          Now I have finished education as a Javascript frontend-developer and I take this step in my life with a major provocation.
   </p>
 </section>
-
-<div class="photo">
-  <img src="pictures/photo.jpg" alt="" />
-  
-</div>
