--- a/page-contact.html
+++ b/page-contact.html
@@ -9,8 +9,17 @@
 <a href = "mailto: nickqsr@yahoo.com" class="btn btn-primary btn-lg">Send Email</a>
 
 <section id="phone">
-
           You're welcome to call<br>
           tel : 0762295568
-
 </section>
+<div class="social">
+  <!-- Facebook -->
+  <a href="https://www.facebook.com/sharer/sharer.php?u="class="fa fa-facebook"></a>
+  <!-- <a href="https://www.facebook.com/sharer/sharer.php?u=">Share on Facebook</a> -->
+  <!-- Twitter -->
+  <a href="https://twitter.com/home?status="class="fa fa-twitter"></a>
+  <!-- Google-Plus -->
+  <a href="https://plus.google.com/share?url=" class="fa fa-google-plus"></a>
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/shareArticle?mini=true&url=&title=&summary=&source=" class="fa fa-linkedin"></a>
+</div>
