--- a/page-projects.html
+++ b/page-projects.html
@@ -6,3 +6,20 @@
       </ul>
 </div>
 <div id="title3">Projects</div>
+<div class="social">
+  <!-- Facebook -->
+  <a href="https://www.facebook.com/sharer/sharer.php?u="class="fa fa-facebook"></a>
+  <!-- <a href="https://www.facebook.com/sharer/sharer.php?u=">Share on Facebook</a> -->
+  <!-- Twitter -->
+  <a href="https://twitter.com/home?status="class="fa fa-twitter"></a>
+  <!-- Google-Plus -->
+  <a href="https://plus.google.com/share?url=" class="fa fa-google-plus"></a>
+  <!-- LinkedIn -->
+  <a href="https://www.linkedin.com/shareArticle?mini=true&url=&title=&summary=&source=" class="fa fa-linkedin"></a>
+</div>
+<div class="box">
+ <ul>
+   <li><a class="project" href="Projects/Infographic/infographic.html">Infographic</a></li>
+   <li><a class="project" href="Projects/Game/index.html">Game</a></li>
+ </ul>
+</div>
