--- a/page-projects.html
+++ b/page-projects.html
@@ -19,7 +19,7 @@
 </div>
 <div class="box">
  <ul>
-   <li><a class="project" href="./Projects/Infographic/index.html">Infographic</a></li>
-   <li><a class="project" href="Projects/Game/index.html">Game</a></li>
+   <li><a class="project" href="/Infographic/index.html">Infographic</a></li>
+   <li><a class="project" href="/Game/index.html">Game</a></li>
  </ul>
 </div>
