--- a/page-projects.html
+++ b/page-projects.html
@@ -20,6 +20,6 @@
 <div class="box">
  <ul>
    <li><a class="project" href="Infographic/index.html">Infographic</a></li>
-   <li><a class="project" href="Game/index.html">Game</a></li>
+   <li><a class="project" href="Spel/index.html">Game</a></li>
  </ul>
 </div>
