--- a/Infographic/index.html
+++ b/Infographic/index.html
@@ -17,8 +17,8 @@
    </select>
    <p>Click for more info on each box</p>
 
-  <img id=player1 src="http://i.imgur.com/cK4muTC.gif" alt="football player">
-<img id=player2 src="http://i.imgur.com/D9jgKBu.jpg" alt="football player">
+  <img id=player1 src="https://i.imgur.com/cK4muTC.gif" alt="football player">
+<img id=player2 src="https://i.imgur.com/D9jgKBu.jpg" alt="football player">
 
   <main>
 <div class="football-box logo1">
