--- a/Infographic/index.html
+++ b/Infographic/index.html
@@ -163,7 +163,7 @@
 </main>
 
 
- <script src="js/jquery-2.1.4.min.js"></script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
