--- a/Spel/guess.html
+++ b/Spel/guess.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="js/game.js" type="text/javascript"></script>
 </body>
 </html>
