--- a/Spel/index.html
+++ b/Spel/index.html
@@ -19,6 +19,7 @@
         <a class="a" href="/#/projects">Back to Projects</a>
         <div class="img"></div>
       </main>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="js/game.js"></script>
       </body>
       </html>
