--- a/page-projects.html
+++ b/page-projects.html
@@ -21,5 +21,6 @@
  <ul>
    <li><a class="project" href="Infographic/index.html">Infographic</a></li>
    <li><a class="project" href="Spel/index.html">Game</a></li>
+   <li><a class="project" href="Projects/API/api.html">Weather</a></li> 
  </ul>
 </div>
