--- a/page-projects.html
+++ b/page-projects.html
@@ -22,5 +22,6 @@
    <li><a class="project" href="Infographic/index.html">Infographic</a></li>
    <li><a class="project" href="Spel/index.html">Game</a></li>
    <li><a class="project" href="Weather/api.html">Weather</a></li> 
+   <li><a class="project" href="Examenarbete/index.html">Examenarbete</a></li>
  </ul>
 </div>
