--- a/page-projects.html
+++ b/page-projects.html
@@ -23,5 +23,6 @@
    <li><a class="project" href="Spel/index.html">Game</a></li>
    <li><a class="project" href="Weather/api.html">Weather</a></li> 
    <li><a class="project" href="Examenarbete/index.html">Examenarbete</a></li>
+   <li><a class="project" href="Grid/index.html">Grid</a></li>
  </ul>
 </div>
