--- a/page-projects.html
+++ b/page-projects.html
@@ -19,7 +19,7 @@
 </div>
 <div class="box">
  <ul>
-   <li><a class="project" href="Examenarbete/index.html">Examenarbete</a></li>
+   <li><a class="project" href="Examenarbete/index.html">Examen</a></li>
    <li><a class="project" href="Grid/index.html">Grid</a></li>
    <li><a class="project" href="Weather/api.html">Weather</a></li> 
    <li><a class="project" href="Infographic/index.html">Infographic</a></li>
