--- a/Spel/index.html
+++ b/Spel/index.html
@@ -16,6 +16,7 @@
             <h1 class="logo"><a href="guess.html">Guess the Europe`s country</a></h1>
               <p id="intro">"Welcome to a game with country`s name.<br>You must to klick on top to start the game."</p>
         </header>
+        <a href="javascript:history.go(-1)">Go Back</a>
         <a class="active"  href="#projects">Back to Projects</a>
         <div class="img"></div>
       </main>
