--- a/Infographic/index.html
+++ b/Infographic/index.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-
+  <a class="active" href="javascript:history.go(-1)">Back to Projects</a>
   <h1>World cup football history</h1>
   <label>Sort By</label>
   <select id="sort" name="select">
