--- a/Spel/index.html
+++ b/Spel/index.html
@@ -10,13 +10,13 @@
      <link rel="stylesheet" href="css/style.css" >
   </head>
 <body>
-
+ <a class="a" href="javascript:history.go(-1)">Back to Projects</a>
     <main>
         <header>
             <h1 class="logo"><a href="guess.html">Guess the Europe`s country</a></h1>
               <p id="intro">"Welcome to a game with country`s name.<br>You must to klick on top to start the game."</p>
         </header>
-        <a class="active" href="javascript:history.go(-1)">Back to Projects</a>
+       
         
         <div class="img"></div>
       </main>
