--- a/page-projects.html
+++ b/page-projects.html
@@ -19,10 +19,10 @@
 </div>
 <div class="box">
  <ul>
-   <li><a class="project" href="Examenarbete/index.html">Examen</a></li>
-   <li><a class="project" href="Weather/api.html">Weather</a></li> 
-   <li><a class="project" href="Infographic/index.html">Infographic</a></li>
-   <li><a class="project" href="Spel/index.html">Game</a></li>
-   <li><a class="project" href="Grid/index.html">Grid</a></li>
+   <li><a class="project" href="Examenarbete/index.html">Examen</a></li><br>
+   <li><a class="project" href="Weather/api.html">Weather</a></li><br> 
+   <li><a class="project" href="Infographic/index.html">Infographic</a></li><br>
+   <li><a class="project" href="Spel/index.html">Game</a></li><br>
+   <li><a class="project" href="Grid/index.html">Grid</a></li><br>
  </ul>
 </div>
