--- a/Weather/api.html
+++ b/Weather/api.html
@@ -22,7 +22,8 @@
   </div>
 <span style="font-size:40px;cursor:pointer" onclick="openNav()">&#9776;</span>
 
- 
+ <a class="a" href="javascript:history.go(-1)">Back to Projects</a>
+   
     <h1>Weather in Sweden</h1>
   	<div class="content">
       <h1 id="current_temp"></h1>
