--- a/page-projects.html
+++ b/page-projects.html
@@ -24,5 +24,6 @@
    <li><a class="project" href="Infographic/index.html">Infographic</a></li><br>
    <li><a class="project" href="Spel/index.html">Game</a></li><br>
    <li><a class="project" href="Grid/index.html">Grid</a></li><br>
+    <li><a class="project" href="Vue-project/index.html">Vue-app</a></li><br>  
  </ul>
 </div>
