--- a/page-about.html
+++ b/page-about.html
@@ -22,8 +22,7 @@
 
 <section id="description">
   <p class="blocktext">
-	  My name is Nicolae, I live in Södertälje and I'm 49 years old. I had settled before to working in the IT industry but I could not do this because of various reasons.
-          In 2010 I have moved in Sweden and have started a new life.
-          Now I have finished education as a Javascript frontend-developer and I take this step in my life with a major provocation.
+	My name is Nicolae, I live in Södertälje and I'm 50 years old. I have decided before to work in the IT industry, but I could not do this because of various reasons. In 2010 I have moved to Sweden and I have started a new life.
+	  Now I have finished my education as a Javascript frontend-developer and I take this step in my life with a big challenge.
   </p>
 </section>
